--- a/src/app/dar-qs/dar-qs.component.html
+++ b/src/app/dar-qs/dar-qs.component.html
@@ -87,6 +87,7 @@
             </div>
 
             <div class="duos-box">
+
                 <div>
                     <label class="control-label rp-choice-questions">2.5 Please state the disease area(s) this study focus on
                     </label>
@@ -98,15 +99,16 @@
                             {{fruit}}
                             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                         </mat-chip>
-                        <input placeholder="New fruit..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                        <input placeholder="Diseases..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
                             [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
                     </mat-chip-list>
-                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="typeaheadOnSelect($event)">
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
                         <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
                             {{fruit}}
                         </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
+
             </div>
 
             <!-- <div class="row">
