--- a/src/app/dul-qs/dul-qs.component.html
+++ b/src/app/dul-qs/dul-qs.component.html
@@ -37,18 +37,28 @@
                             Future use is limited to research involving the following disease area(s) [DS]
                         </label>
                     </div>
+                    <!-- 
+                    <mat-form-field class="example-chip-list">
 
-                    <!-- <div>
-                        <div>
-                            <p-autoComplete formControlName="ontologiesSelectedLabels" name="ontologiesSelectedLabels" [suggestions]="ontologies" (completeMethod)="getFilteredOntologies($event)"
-                                (onSelect)="typeaheadOnSelect($event)" styleClass="wid100" [minLength]="3" placeholder="Choose any number of Disease Ontology or none."
-                                field="label" [delay]="500" [multiple]="true">
-                            </p-autoComplete>
-                        </div>
-                        <button mat-raised-button color="primary" type="button" (click)="clearOntologies()">
-                            Clear ontologies
-                        </button>
-                    </div> -->
+                        <mat-chip-list #chipList >
+
+                            <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable" (removed)="remove(fruit)">
+                                {{fruit}}
+                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                            </mat-chip>
+
+                            <input placeholder="Diseases ..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+
+                        </mat-chip-list>
+
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="typeaheadOnSelect($event)">
+                            <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+                                {{fruit}}
+                            </mat-option>
+                        </mat-autocomplete>
+
+                    </mat-form-field> -->
 
                     <mat-form-field class="example-chip-list">
                         <mat-chip-list #chipList>
@@ -56,10 +66,10 @@
                                 {{fruit}}
                                 <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                             </mat-chip>
-                            <input placeholder="New fruit..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                            <input placeholder="Diseases..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
                                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
                         </mat-chip-list>
-                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="typeaheadOnSelect($event)">
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
                             <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
                                 {{fruit}}
                             </mat-option>
