--- a/src/app/dar-qs/dar-qs.component.html
+++ b/src/app/dar-qs/dar-qs.component.html
@@ -94,42 +94,27 @@
                 </div>
 
                 <mat-form-field class="example-chip-list">
-                    <mat-chip-list #chipList>
-                        <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable" (removed)="remove(fruit)">
-                            {{fruit}}
-                            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                        </mat-chip>
-                        <input placeholder="Diseases..." #fruitInput [formControl]="fruitCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
-                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
-                    </mat-chip-list>
-                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                        <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
-                            {{fruit}}
-                        </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
+                        <mat-chip-list #chipList>
+
+                            <mat-chip *ngFor="let disease of diseases" [selectable]="selectable" [removable]="removable" (removed)="remove(disease)">
+                                {{ disease.label }}
+                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                            </mat-chip>
+
+                            <input placeholder="Diseases..." #fruitInput [formControl]="diseasesCtrl" [matAutocomplete]="auto" [matChipInputFor]="chipList"
+                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+
+                        </mat-chip-list>
+
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                            <mat-option *ngFor="let disease of filteredDiseases" [value]="disease">
+                                {{ disease.label }}
+                            </mat-option>
+                        </mat-autocomplete>
+
+                    </mat-form-field>
 
             </div>
-
-            <!-- <div class="row">
-                <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-                    <p-autoComplete formControlName="ontologiesSelectedLabels" name="ontologiesSelectedLabels" [suggestions]="ontologies" (completeMethod)="getFilteredOntologies($event)"
-                        styleClass="wid100" [minLength]="3" placeholder="Choose any number of Disease Ontology or none." field="label"
-                        [delay]="500" [multiple]="true">
-                    </p-autoComplete>
-                </div>
-                <button mat-raised-button color="primary" type="button" (click)="clearOntologies()">
-                    Clear ontologies
-                </button>
-            </div>
-
-            <div [hidden]="typeaheadLoading!==true">
-                <i class="glyphicon glyphicon-refresh ng-hide" style=""></i>
-            </div>
-
-            <div [hidden]="typeaheadNoResults!==true" class="" style="">
-                <i class="glyphicon glyphicon-remove"></i> No Results Found
-            </div> -->
 
             <div>
                 <label>3. Research Purpose Statement</label>
@@ -252,7 +237,7 @@
             </div>
 
         </form>
-        <!-- {{ darForm.value | json }} -->
+
     </mat-expansion-panel>
 
 </mat-accordion>
