fixing electron build

--- a/src/app/dar-info/dar-info.component.html
+++ b/src/app/dar-info/dar-info.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel expanded="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        DAR Info
+        <strong>DAR Info</strong>
       </mat-panel-title>
       <mat-panel-description>
         DAR JSON Before translation
