--- a/src/app/dul-info/dul-info.component.html
+++ b/src/app/dul-info/dul-info.component.html
@@ -2,7 +2,7 @@
   <mat-expansion-panel expanded="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        DUL Info
+        <strong>DUL Info</strong>
       </mat-panel-title>
       <mat-panel-description>
         DUL JSON Before translation
