--- a/src/app/dul-json/dul-json.component.html
+++ b/src/app/dul-json/dul-json.component.html
@@ -2,10 +2,10 @@
   <mat-expansion-panel expanded="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Structured DUL Restrictions
+        <strong>Structured DUL Restrictions</strong>
       </mat-panel-title>
       <mat-panel-description>
-        Ontology level JSON to be used in Match process
+        Ontology level JSON 
       </mat-panel-description>
     </mat-expansion-panel-header>
 
