--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div fxLayout="row">
 
     <div>
-      <img src="assets/images/broad_logo.png" />
+      <img src="assets/images/logo.png" />
     </div>
 
     <div fxFlex></div>
